hphp/hack/test/typecheck/uninstantiable_func_return1.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

abstract final class C {}

function foo(): ?C {
  return null;
}
